Remove Left Section

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						<div class="articleRightInner">
 							<a target="_blank" href="/img/Shridhar-Gharat-Awards.jpg"><img style="width: 250px" src="img/Shridhar-Gharat-Awards.jpg" alt="Shridhar Gharat Awards" /></a>
 						</div>
-						Awards received by Shridhar Gharat>
+						Awards received by Shridhar Gharat
 					</div>
 					<p>In the year 2003, Sir was honored by the State Award from the Government of Maharashtra as the best teacher for his contribution to the field.
 					</p>
